# RagsWorth

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  test.html
.github/workflows/: test.yml
docs/: configuration.md  embedding-models.md  faiss_integration.md  faq.md  index.md  pii-protection.md  troubleshooting.md  vector-db.md
docs/api/: README.md
ragsworth/: __init__.py  app.py  auth.py  cli.py  document_loader.py  pipeline.py  stages.py
ragsworth/config/: app_config.py  logging_config.py
ragsworth/db/: engine.py
ragsworth/factory/: component_factory.py
ragsworth/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
ragsworth/models/: api.py  users.py
ragsworth/rag/: chunker.py  document_processor.py  loader.py  vectorstore.py
ragsworth/routes/: auth.py  chat.py  health.py  protected.py  users.py
ragsworth/security/: pii.py
scripts/: debug_milvus.py  debug_vectorstore.py
static/: widget.js
tests/: test_cli.py
